deployment/sample.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexthouse
  labels:
    app: nexthouse
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nexthouse
  template:
    metadata:
      labels:
        app: nexthouse
    spec:
      containers:
      - name: nexthouse
        image: eastshine96/nexthouse:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8888
