deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexthouse-svc
  labels:
    app: nexthouse
spec:
  type: NodePort
  ports:
  - port: 8888
    targetPort: 8888
  selector:
    app: nexthouse
